--- a/index.html
+++ b/index.html
@@ -14,37 +14,71 @@
 
 <body>
 <header>
-	<a href="#"><img src="images/logo.jpg" alt="logo"></a>
-	<button>☰</button>
+	<nav>
+		<a href="#"><img src="images/logo.jpg" alt="logo"></a>
+		<details>
+			<summary>☰</summary>
+			<ul>
+				<li><a href="#">App</a></li>
+				<li><a href="#">McDonald's Nieuwsbrief</a></li>
+				<li><a href="#">Werken bij McDonalds</a></li>
+				<li><a href="#">Franchising</a></li>
+			</ul>
+			<div></div>
+			<ul>
+				<li>
+					<details>
+						<summary>Menu</summary>
+						<a href="#">Bekijk alle producten</a>
+						<ul>
+							<li><a href="#">Voordeelmenu</a></li>
+							<li><a href="#">Rundvlees</a></li>
+							<li><a href="#">Kip</a></li>
+						</ul>
+					</details>
+				</li>
+				<li><a href="#">Newsroom Pers</a></li>
+				<li><a href="#">Familie</a></li>
+				<li><a href="#">Ook dat doet McDonald's</a></li>
+				<li><a href="#">McDelivery</a></li>
+			</ul>
+			<div></div>
+			<ul>
+				<li><a href="#">Zoeken</a></li>
+				<li><a href="#">Vind een restaurant</a></li>
+			</ul>
+			<div></div>
+		</details>
+	</nav>
 </header>
 <main>
 	<h1>Dit is de website van McDonalds Nederland</h1>
-	<article>
-		<section>
+	<ul>
+		<li>
 			<img src="images/korean-burger.jpg" alt="McCrispy Korean">
 			<h2>De nieuwe hit: McCrispy Korean</h2>
 			<p>Een krokante, juicy Kipburger met een frisse Kimchi-koolmix en precies genoeg spice - kom jij 'm proeven?</p>
 			<a href="#">Ontdek meer</a>
-		</section>
-		<section>
+		</li>
+		<li>
 			<img src="images/homeslider-burger.png" alt="Vegetarische burger">
 			<h2>Terug van weggeweest!</h2>
 			<p>De vertrouwde smaak, maar dan zonder vlees.</p>
 			<a href="#">Ontdek meer</a>
-		</section>
-		<section>
+		</li>
+		<li>
 			<img src="images/happymeal.png" alt="Happymeal">
 			<h2>Happy Meal</h2>
 			<p>Het Happy Meal is al 40 jaar een icoon op ons menu, speciaal voor onze kleinste gasten. Naast een heerlijk gevarieerd aanbod en altijd groente of fruit in het Happy Meal, kunnen kinderen sinds 2019 kiezen tussen een boekje of speeltje. Vanaf 31 juli t/m 10 september zijn de speeltjes van TMNT X Hello Kitty te vinden in het Happy Meal.</p>
 			<a href="#">Ontdek meer</a>
-		</section>
-		<section>
+		</li>
+		<li>
 			<img src="images/office.png" alt="Hoofdkantoor McDonalds Nederland">
 			<h2>McDonald's maakt impact</h2>
 			<p>McDonald's heeft de afgelopen jaren belangrijke stappen gezet om een positieve bijdrage te leveren aan de planeet, voeding, de maatschappij en als werkgever.</p>
 			<a href="#">Klik voor het Impact Rapport</a>
-		</section>
-	</article>
+		</li>
+	</ul>
 
 	<section>
 		<img src="images/mccafe.avif" alt="McCafé">
