--- a/cola.html
+++ b/cola.html
@@ -16,7 +16,7 @@
 <body>
 <header>
 	<nav>
-		<a href="#"><img src="images/logo.jpg" alt="logo"></a>
+		<a href="index.html"><img src="images/logo.jpg" alt="logo"></a>
 	
 		<button id="hamburger" aria-label="Open menu">☰</button>
 	
@@ -57,50 +57,19 @@
 		</div>
 	</nav>
 </header>
-	  
-<main>
-	<h1>Dit is de website van McDonalds Nederland</h1>
-	<ul>
-		<li>
-			<img src="images/korean-burger.jpg" alt="McCrispy Korean">
-			<h2>De nieuwe hit: McCrispy Korean</h2>
-			<p>Een krokante, juicy Kipburger met een frisse Kimchi-koolmix en precies genoeg spice - kom jij 'm proeven?</p>
-			<a href="cola.html">Ontdek meer</a>
-		</li>
-		<li>	
-			<img src="images/homeslider-burger.png" alt="Vegetarische burger">
-			<h2>Terug van weggeweest!</h2>
-			<p>De vertrouwde smaak, maar dan zonder vlees.</p>
-			<a href="cola.html">Ontdek meer</a>
-		</li>
-		<li>
-			<img src="images/happymeal.png" alt="Happymeal">
-			<h2>Happy Meal</h2>
-			<p>Het Happy Meal is al 40 jaar een icoon op ons menu, speciaal voor onze kleinste gasten. Naast een heerlijk gevarieerd aanbod en altijd groente of fruit in het Happy Meal, kunnen kinderen sinds 2019 kiezen tussen een boekje of speeltje. Vanaf 31 juli t/m 10 september zijn de speeltjes van TMNT X Hello Kitty te vinden in het Happy Meal.</p>
-			<a href="cola.html">Ontdek meer</a>
-		</li>
-		<li>
-			<img src="images/office.png" alt="Hoofdkantoor McDonalds Nederland">
-			<h2>McDonald's maakt impact</h2>
-			<p>McDonald's heeft de afgelopen jaren belangrijke stappen gezet om een positieve bijdrage te leveren aan de planeet, voeding, de maatschappij en als werkgever.</p>
-			<a href="cola.html">Klik voor het Impact Rapport</a>
-		</li>
-	</ul>
-	<article>
-		<section>
-			<img src="images/mccafe.avif" alt="McCafé">
-			<h2>McCafé</h2>
-			<p>Er is altijd een McCafé in de buurt. Daar kun je elk moment van de dag terecht voor je favoriete koffie en lekkers.</p>
-			<a href="cola.html">Meer weten</a>
-		</section>
 
-		<section>
-			<img src="images/mcdelivery.avif" alt="McDelivery">
-			<h2>Geen zorgen, we bezorgen</h2>
-			<p>Je hoeft de deur niet meer uit om te genieten van onze producten. Laat ze bezorgen met McDelivery.</p>
-			<a href="cola.html">Nu proberen</a>
-		</section>
-	</article>
+<main class="cola">
+    <section>
+        <h1>Coca-Cola</h1>
+        <p>723 KJ | 170 Kcal</p>
+        <p>Verander je maat</p>
+        <ul>
+            <li><button>M</button><p>Medium</p></li>
+            <li><button>L</button><p>Groot</p></li>
+            <li><button>S</button><p>Klein</p></li>
+        </ul>
+    </section>
+    <img src="images/cola.avif" alt="cola">
 </main>
 
 <footer>
