--- a/cola.html
+++ b/cola.html
@@ -60,16 +60,130 @@
 
 <main class="cola">
     <section>
-        <h1>Coca-Cola</h1>
-        <p>723 KJ | 170 Kcal</p>
-        <p>Verander je maat</p>
-        <ul>
-            <li><button>M</button><p>Medium</p></li>
-            <li><button>L</button><p>Groot</p></li>
-            <li><button>S</button><p>Klein</p></li>
-        </ul>
+        <div>
+            <h1>Coca-Cola</h1>
+            <p>723 KJ | 170 Kcal</p>
+            <p>Verander je maat</p>
+            <ul>
+                <li><button>M</button><p>Medium</p></li>
+                <li><button>L</button><p>Groot</p></li>
+                <li><button>S</button><p>Klein</p></li>
+            </ul>
+            <p>Lekker opfrissen met de enige echte Coca-Cola medium. Heerlijk bij je menu of verrassend verfrissend voor onderweg.</p>
+        </div>
+        <img src="images/cola.avif" alt="cola">
     </section>
-    <img src="images/cola.avif" alt="cola">
+
+    <h2>Voedingsinformatie</h2>
+
+    <details>
+        <summary>Voedingswaarde</summary>
+        <ul>
+            <li><p>723KJ</p><p>Energie (KJ)(9%RI*)</p></li>
+            <li><p>170Kcal</p><p>Energie (Kcal)(9%RI*)</p></li>
+            <li><p>0g</p><p>Vette (0%RI*)</p></li>
+        </ul>
+
+        <table>
+            <caption>Nutritional Information</caption>
+            <thead>
+              <tr>
+                <th>Nutrition</th>
+                <th>Per 100g</th>
+                <th>Per PTN</th>
+                <th>%DV (Adult)</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Energie (KJ)</td>
+                <td>174,1</td>
+                <td>904</td>
+                <td>11% DV*</td>
+              </tr>
+              <tr>
+                <td>Energie (Kcal)</td>
+                <td>41</td>
+                <td>213</td>
+                <td>11% DV*</td>
+              </tr>
+              <tr>
+                <td>Vetten (g)</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0% DV*</td>
+              </tr>
+              <tr>
+                <td>Verzadigde vetzuren (g)</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0% DV*</td>
+              </tr>
+              <tr>
+                <td>Koolhydraten (g)</td>
+                <td>10,2</td>
+                <td>53</td>
+                <td>20% DV*</td>
+              </tr>
+              <tr>
+                <td>Suikers (g)</td>
+                <td>10,2</td>
+                <td>53</td>
+                <td>59% DV*</td>
+              </tr>
+              <tr>
+                <td>Vezels (g)</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0% DV*</td>
+              </tr>
+              <tr>
+                <td>Eiwit (g)</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0% DV*</td>
+              </tr>
+              <tr>
+                <td>Zout (g)</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0% DV*</td>
+              </tr>
+              <tr>
+                <td>Serving Size</td>
+                <td>100</td>
+                <td>519,31</td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+    </details>
+
+    <details>
+        <summary>Ingrediëngten en allergenen</summary>
+        <ul>
+            <li>Coca-Cola</li>
+            <li>Suiker, water, kler E150d, zuurmiddel E338, natuurlijke aroma's</li>
+        </ul>
+        <ul>
+            <li>Water</li>
+            <li>Water</li>
+        </ul>
+        <ul>
+            <li>Ijsblokjes</li>
+            <li>Water</li>
+        </ul>
+    </details>
+
+    <section>
+        <p>De bovenstaande voedingsinformatie and informatie in de Nutrition Calculator staan niet garant voor eventuele aanpassingen aan het product</p>
+        <a href="index.html">Bereken voedingswaarde</a>
+    </section>
+
+    <article>
+        <p>McDonald's streeft ernaar zo volledig mogelijke informatie te geven over de voedingswaarde van, en de allergenen in, haar producten. De informatie over voedingswaarden en allergenen is gebaseerd op de standaard productsamenstelling. Portiegroottes in het restaurant kunnen verschillen van de hoeveelheid waarmee de analyse is uitgevoerd. Er zijn variaties mogelijk, afhankelijk van de lokale leverancier, de regio of de tijd van het jaar. McDonald’s is niet aansprakelijk voor eventuele onjuistheden in door haar leveranciers opgegeven gegevens of informatie afkomstig van andere externe bronnen.</p>
+        <p>McDonald's is geen allergenenvrij restaurant. De mogelijkheid van kruisbesmetting van allergenen is altijd aanwezig. McDonald’s kan zodoende niet garanderen dat haar producten geen sporen van allergenen bevatten. McDonald’s aanvaardt daarom geen aansprakelijkheid indien een gast als gevolg van het binnenkrijgen van (een spoor van) een allergeen lichamelijke klachten krijgt. Alle producten kunnen sporen bevatten van dierlijke ingrediënten. McDonald’s streeft er naar om de voedingswaarde- en allergeneninformatie altijd up to date te houden. De verstrekte informatie is alleen van toepassing op de in Nederland verkochte producten. Voor meer informatie over voedingswaarden en allergenen kijk op de McDonald's website  of in de McDonald’s App. Publicatiefouten voorbehouden.</p>
+    </article>
 </main>
 
 <footer>
