--- a/cola.html
+++ b/cola.html
@@ -6,17 +6,17 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2526</title>
+	<title>Coca-Cola</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/jpg+xml" href="images/logo.jpg">
 	<script src="scripts/script.js" defer></script>
 </head>
 
 <body>
 <header>
 	<nav>
-		<a href="index.html"><img src="images/logo.jpg" alt="logo"></a>
+		<a href="index.html"><img src="images/logo.png" alt="logo"></a>
 	
 		<button id="hamburger" aria-label="Open menu">☰</button>
 	
@@ -71,7 +71,7 @@
             </ul>
             <p>Lekker opfrissen met de enige echte Coca-Cola medium. Heerlijk bij je menu of verrassend verfrissend voor onderweg.</p>
         </div>
-        <img src="images/cola.avif" alt="cola">
+        <img src="images/cola.png" alt="cola">
     </section>
 
     <h2>Voedingsinformatie</h2>
@@ -226,7 +226,7 @@
 		<ul>
 			<li><a href="#">Disclaimer</a></li>
 			<li><a href="#">Privacy</a><a href="#">Cookies</a></li>
-			<li><img src="images/logo.jpg" alt="logo"><p>© Copyright © 2025 McDonald's Nederland.</p></li>
+			<li><img src="images/logo.png" alt="logo"><p>© Copyright © 2025 McDonald's Nederland.</p></li>
 		</ul>
 	</section>
 </footer>
