--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2526</title>
+	<title>McDonald's Nederland: Burgers, Franse Friet en veel meer!</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/png+xml" href="images/logo.png">
 	<script src="scripts/script.js" defer></script>
 </head>
 
 <body>
 <header>
 	<nav>
-		<a href="#"><img src="images/logo.jpg" alt="logo"></a>
+		<a href="#"><img src="images/logo.png" alt="logo"></a>
 	
 		<button id="hamburger" aria-label="Open menu">☰</button>
 	
@@ -51,7 +51,7 @@
 			<span></span>
 			<ul>
 				<li><a href="#">Zoeken</a></li>
-				<li><a href="#">Vind een restaurant</a></li>
+				<li class="blue"><a href="#">Vind een restaurant</a></li>
 			</ul>
 			<span></span>
 		</div>
@@ -86,21 +86,19 @@
 			<a href="cola.html">Klik voor het Impact Rapport</a>
 		</li>
 	</ul>
-	<article>
-		<section>
-			<img src="images/mccafe.avif" alt="McCafé">
-			<h2>McCafé</h2>
-			<p>Er is altijd een McCafé in de buurt. Daar kun je elk moment van de dag terecht voor je favoriete koffie en lekkers.</p>
-			<a href="cola.html">Meer weten</a>
-		</section>
+	<section>
+		<img src="images/mccafe.avif" alt="McCafé">
+		<h2>McCafé</h2>
+		<p>Er is altijd een McCafé in de buurt. Daar kun je elk moment van de dag terecht voor je favoriete koffie en lekkers.</p>
+		<a href="cola.html">Meer weten</a>
+	</section>
 
-		<section>
-			<img src="images/mcdelivery.avif" alt="McDelivery">
-			<h2>Geen zorgen, we bezorgen</h2>
-			<p>Je hoeft de deur niet meer uit om te genieten van onze producten. Laat ze bezorgen met McDelivery.</p>
-			<a href="cola.html">Nu proberen</a>
-		</section>
-	</article>
+	<section>
+		<img src="images/mcdelivery.avif" alt="McDelivery">
+		<h2>Geen zorgen, we bezorgen</h2>
+		<p>Je hoeft de deur niet meer uit om te genieten van onze producten. Laat ze bezorgen met McDelivery.</p>
+		<a href="cola.html">Nu proberen</a>
+	</section>
 </main>
 
 <footer>
@@ -143,7 +141,7 @@
 		<ul>
 			<li><a href="#">Disclaimer</a></li>
 			<li><a href="#">Privacy</a><a href="#">Cookies</a></li>
-			<li><img src="images/logo.jpg" alt="logo"><p>© Copyright © 2025 McDonald's Nederland.</p></li>
+			<li><img src="images/logo.png" alt="logo"><p>© Copyright © 2025 McDonald's Nederland.</p></li>
 		</ul>
 	</section>
 </footer>
